[package]
name = "fhe-iris-code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
itertools = "0.12.0"
rand = "0.8.5"
ruint = { version = "1.11.1", features = ["rand"] }
tfhe = { version = "0.5.0", features = ["boolean", "shortint", "integer", "aarch64-unix"] }

# Compilation profile for any non-workspace member.
# We want tfhe and other deps to always be build optimized, otherwise tests will run very slow.
[profile.dev.package."*"]
opt-level = 3

# Use local checkout of tfhe-rs
[patch.crates-io]
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", branch = "main" }
# tfhe = { path = "../github/zama-ai/tfhe-rs/tfhe" }
